; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_getDbPointer.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test1.c_getDbPointer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SqliteDb = type { i32* }
%struct.TYPE_3__ = type { i64 }

@TCL_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getDbPointer(i32* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca %struct.SqliteDb*, align 8
  %8 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32** %2, i32*** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @Tcl_GetCommandInfo(i32* %9, i8* %10, %struct.TYPE_3__* %8)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to %struct.SqliteDb*
  store %struct.SqliteDb* %16, %struct.SqliteDb** %7, align 8
  %17 = load %struct.SqliteDb*, %struct.SqliteDb** %7, align 8
  %18 = getelementptr inbounds %struct.SqliteDb, %struct.SqliteDb* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i32**, i32*** %6, align 8
  store i32* %19, i32** %20, align 8
  br label %26

21:                                               ; preds = %3
  %22 = load i8*, i8** %5, align 8
  %23 = call i64 @sqlite3TestTextToPtr(i8* %22)
  %24 = inttoptr i64 %23 to i32*
  %25 = load i32**, i32*** %6, align 8
  store i32* %24, i32** %25, align 8
  br label %26

26:                                               ; preds = %21, %13
  %27 = load i32, i32* @TCL_OK, align 4
  ret i32 %27
}

declare dso_local i64 @Tcl_GetCommandInfo(i32*, i8*, %struct.TYPE_3__*) #1

declare dso_local i64 @sqlite3TestTextToPtr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
